--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,12 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-#: Fonts {{{
+#: Fonts {{{{{{}}}
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      monospace
+font_family      DejaVuSansMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -23,7 +23,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 11.0
+font_size 9.0
 
 #: Font size (in pts)
 
@@ -659,43 +659,35 @@ selection_background #fffacd
 #: the 256 color table as color16 to color255.
 
 color0 #000000
-color8 #767676
-
+color8 #555753
 #: black
 
-color1 #cc0403
-color9 #f2201f
-
+color1 #cc0000
+color9 #ef2929
 #: red
 
-color2  #19cb00
-color10 #23fd00
-
+color2  #4e9a06
+color10 #8ae234
 #: green
 
-color3  #cecb00
-color11 #fffd00
-
+color3  #c4a000
+color11 #fce94f
 #: yellow
 
-color4  #0d73cc
-color12 #1a8fff
-
+color4  #3465a4
+color12 #739fcf
 #: blue
 
-color5  #cb1ed1
-color13 #fd28ff
-
+color5  #75507b
+color13 #ad7fa8
 #: magenta
 
-color6  #0dcdcd
-color14 #14ffff
-
+color6  #06989a
+color14 #34e2e2
 #: cyan
 
-color7  #dddddd
-color15 #ffffff
-
+color7  #d3d7cf
+color15 #eeeeec
 #: white
 
 mark1_foreground black
@@ -790,7 +782,7 @@ listen_on none
 
 #: The value of MYVAR2 will be a/<path to home directory>/b.
 
-update_check_interval 24
+update_check_interval 0
 
 #: Periodically check if an update to kitty is available. If an update
 #: is found a system notification is displayed informing you of the
